gitea/gitea-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
spec:
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      volumes:
        - name: gitea-data
          persistentVolumeClaim:
            claimName: task-pv-claim
      containers:
      - name: gitea
        image: gitea/gitea:1.10.1
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
        volumeMounts:
          - mountPath: "/data"
            name: gitea-data
