gitea/gitea-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gitea
spec:
  selector:
    app: gitea
  ports:
  - port: 80
    targetPort: 3000
