gitea/gitea-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitea
spec:
  rules:
  - host: gitea
    http:
      paths:
      - path: /
        backend:
          serviceName: gitea
          servicePort: 80
